--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-scroll": "^1.8.9"
   },
   "devDependencies": {
